--- a/package.json
+++ b/package.json
@@ -6,21 +6,47 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "NODE_OPTIONS='--experimental-vm-modules' jest",
+    "test:e2e": "npx playwright test"
   },
   "dependencies": {
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
-    "next": "15.0.3"
+    "@ai-sdk/openai": "^1.0.4",
+    "@anthropic-ai/sdk": "^0.32.1",
+    "@playwright/test": "^1.49.0",
+    "@testing-library/user-event": "^14.5.2",
+    "ai": "^4.0.3",
+    "autoprefixer": "^10.4.20",
+    "dotenv": "^16.4.5",
+    "idb": "^8.0.0",
+    "next": "15.0.3",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-markdown": "^9.0.1",
+    "react-syntax-highlighter": "^15.6.1",
+    "rehype-katex": "^7.0.1"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-react": "^7.25.9",
+    "@babel/preset-typescript": "^7.26.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.0.1",
+    "@types/jest": "^29.5.14",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "babel-jest": "^29.7.0",
+    "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^8",
-    "eslint-config-next": "15.0.3"
+    "eslint-config-next": "15.0.3",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "module-resolver": "^1.0.0",
+    "playwright": "^1.49.0",
+    "postcss": "^8.4.49",
+    "react-testing-library": "^8.0.1",
+    "tailwindcss": "^3.4.15",
+    "typescript": "^5"
   }
 }
